合并最新的内容，完善泰尔基尼和首页map